syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateBilling (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  repeated string costs = 1;
}

message BillingResponse {
  string status = 1;
}